force-app/main/default/objects/Assessment_Definition_Item__c/Assessment_Definition_Item__c.object-meta.xml
<CustomObject>
    <label>Assessment Definition Item</label>
    <nameField>
        <label>Assessment Definition Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Definition Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>