force-app/main/default/objects/Assessment_Definition_Item__c/fields/Next_Item_Condition_Operator__c.field-meta.xml
<CustomField>
    <fullName>Next_Item_Condition_Operator__c</fullName>
    <label>Next Item Condition Operator</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Question_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equal To</fullName>
            </value>
            <value>
                <fullName>Not Equal To</fullName>
            </value>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>