force-app/main/default/objects/Assessment_Definition_Item__c/fields/Next_Item_Name_Other_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Next_Item_Name_Other_Outcome__c</fullName>
    <externalId>true</externalId>
    <label>Next Item Name (Other Outcome)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>