force-app/main/default/objects/Assessment_Definition_Item__c/fields/Next_Item_Outcome_Condition__c.field-meta.xml
<CustomField>
    <fullName>Next_Item_Outcome_Condition__c</fullName>
    <label>Next Item Condition Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>