force-app/main/default/objects/Assessment_Definition_Item__c/fields/Transfer_Target_Name__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Target_Name__c</fullName>
    <inlineHelpText>Name of the Bot , Queue or Assessment Definition. Use DeveloperNames for Bot/Queue and Assessment Definition Id for Assessments</inlineHelpText>
    <label>Transfer Target Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>