force-app/main/default/objects/Assessment_Definition_Item__c/fields/Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Type__c</fullName>
    <label>Transfer Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bot</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>