force-app/main/default/objects/Assessment_Definition_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Message</fullName>
            </value>
            <value>
                <fullName>Alert</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>