force-app/main/default/objects/Assessment_Definition_Item__c/recordTypes/Alert.recordType-meta.xml
<RecordType>
    <fullName>Alert</fullName>
    <active>true</active>
    <label>Alert</label>
</RecordType>