force-app/main/default/objects/Assessment_Definition_Item__c/recordTypes/Decision.recordType-meta.xml
<RecordType>
    <fullName>Decision</fullName>
    <active>true</active>
    <label>Decision</label>
</RecordType>