force-app/main/default/objects/Assessment_Definition_Item__c/recordTypes/Question.recordType-meta.xml
<RecordType>
    <fullName>Question</fullName>
    <active>true</active>
    <label>Question</label>
</RecordType>