force-app/main/default/objects/Assessment_Definition_Item__c/validationRules/Invalid_Transfer_Target_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Transfer_Target_Name</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(TEXT(Transfer_Type__c)) &amp;&amp; (ISPICKVAL(Transfer_Type__c, &quot;Agent&quot;) &amp;&amp; !ISBLANK( Transfer_Target_Name__c ))</errorConditionFormula>
    <errorDisplayField>Transfer_Target_Name__c</errorDisplayField>
    <errorMessage>Transfer Target Name cannot be specified with &quot;Agent&quot; transfer types</errorMessage>
</ValidationRule>