force-app/main/default/objects/Assessment_Definition_Item__c/validationRules/Operator_Without_Value_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Operator_Without_Value_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(TEXT(Next_Item_Condition_Operator__c) ) &amp;&amp; ISBLANK( Next_Item_Outcome_Condition__c )</errorConditionFormula>
    <errorDisplayField>Next_Item_Outcome_Condition__c</errorDisplayField>
    <errorMessage>Condition Value is required when setting an operator</errorMessage>
</ValidationRule>