force-app/main/default/objects/Assessment_Definition_Item__c/validationRules/Required_Message_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Message_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Message__c) &amp;&amp; (ISPICKVAL( Type__c , &apos;Message&apos;) || ISPICKVAL( Type__c , &apos;Alert&apos;) || ISPICKVAL( Type__c , &apos;Question&apos;))</errorConditionFormula>
    <errorDisplayField>Message__c</errorDisplayField>
    <errorMessage>A message must be specified for this item type</errorMessage>
</ValidationRule>