force-app/main/default/objects/Assessment_Definition_Item__c/validationRules/Required_Transfer_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Transfer_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Type__c, &quot;Transfer&quot;) &amp;&amp; ISBLANK(TEXT( Transfer_Type__c ))</errorConditionFormula>
    <errorDisplayField>Transfer_Type__c</errorDisplayField>
    <errorMessage>Transfer Type is required for Transfer items</errorMessage>
</ValidationRule>