force-app/main/default/objects/Assessment_Definition_Item__c/validationRules/Validate_Conditional_Operator.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Conditional_Operator</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Type__c, &quot;Question&quot;) &amp;&amp;
!ISBLANK(Next_Item_Outcome_Condition__c) &amp;&amp;  ISBLANK(TEXT(Next_Item_Condition_Operator__c))</errorConditionFormula>
    <errorDisplayField>Next_Item_Condition_Operator__c</errorDisplayField>
    <errorMessage>A condition operator must be specified when providing a conditional value</errorMessage>
</ValidationRule>