force-app/main/default/objects/Assessment_Definition_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Assessment_Definition__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Question_Type__c</columns>
    <columns>Next_Item_Outcome_Condition__c</columns>
    <columns>Next_Item_Name__c</columns>
    <columns>Next_Item_Name_Other_Outcome__c</columns>
    <columns>Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>